# vit-iaq-semcom

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/superpowers/specs/: 2026-06-23-a1-metadata-free-design.md
openspec/changes/iaq-a1-metadata-free/: tasks.md
openspec/changes/iaq-awgn-metadata-impact/: design.md  tasks.md
openspec/changes/iaq-baseline-channel-cliff/: design.md  tasks.md
openspec/changes/iaq-learned-semantic-repair/: design.md  proposal.md  tasks.md
openspec/specs/iaq-a1-metadata-free/: spec.md
openspec/specs/iaq-channel/: spec.md
openspec/specs/iaq-fec/: spec.md
openspec/specs/iaq-modulation/: spec.md
openspec/specs/iaq-pipeline/: spec.md
openspec/specs/iaq-source-coding/: spec.md
openspec/specs/vit-encoder/: spec.md
scripts/: run_a1_attention_consistency.py  run_a1_finetune_attention.py  run_a1_repair_head_probe.py  run_a1_sixline_experiment.py  run_awgn_metadata_experiment.py  run_bucket_probe.py  run_bucket_sweep.py  run_cliff_experiment.py  run_repair_sixline_experiment.py  run_repair_train.py  visualize_attention.py  visualize_buckets.py  visualize_repair.py  visualize_repair_cases.py
src/vit_iaq_semcom/: __init__.py  a1.py  bit_allocation.py  bucket.py  channel.py  fec.py  modulation.py  pipeline.py  quantization.py  repair.py  vit_encoder.py
tests/: test_a1.py  test_bit_allocation.py  test_bucket.py  test_channel.py  test_fec.py  test_modulation.py  test_pipeline.py  test_pipeline_modes.py  test_quantization.py  test_repair.py  test_smoke.py  test_vit_encoder.py
(+23 files in other folders)
