[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vit-iaq-semcom"
version = "0.0.1"
description = "ViT-based semantic communications with importance-aware quantization (reproduction of arXiv:2412.06038)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.4",
  "torchvision",
  "einops>=0.8",
  "timm>=1.0",
  "numpy",
  "scipy",
  "pyyaml",
  "tqdm",
  "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
